# jupyter-tikz

./: .gitignore  .readthedocs.yaml  DEVELOPMENT.md  GettingStarted.ipynb  LICENSE  README.md  any_dest.tex  cornway_code.tex  main.py  mkdocs.yml  pyproject.toml  quadratic.tikz  tikz.tex
.github/workflows/: publish.yml  python-publish.yml  python-tests.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
docs/: api.md  arguments.md  index.md  install.md  installation.md
docs/about/: changelog.md  development.md  license.md
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/templates/: LICENSE  basic-usage.md  contribute.md  copyright.md  installation-warning.md  license.md  logo.html  motivation.md  notebook-download.md
docs/usage/: as-magic.md  as-package.md  troubleshooting.md
docs/usage/as-magic-old/: index.md
jupyter_tikz/: __init__.py  jupyter_tikz.py
notebooks/: GettingStarted.ipynb  data.tsv
notebooks/outputs/: a_dot.tex  a_dot.tikz  angle.tex  angle.tikz  jinja_rendered.tex  quadratic.tikz
outputs/: a_dot.tikz  angle.tikz  jinja_rendered.tikz
tests/: conftest.py  test_args.py  test_build_standalone_preamble.py  test_build_template_extras.py  test_build_template_extras.py.bak  test_build_tex_string.py  test_clearup.py  test_env_and_user_ns.py  test_helpers.py  test_invalid_args.py.bak  test_jinja.py  test_jupyter_tikz.py  test_magic_params.py  test_notebook_examples.py  test_notebook_examples.py,bak  test_run_latex.py  test_run_latex.py,bak  test_save.py  test_save_path.py  test_tex__repr__.py  test_tex_templates.py  test_user_ns.py
