[tool.poetry]
name = "jupyter-tikz"
version = "0.2.0"
description = "Magic command for rendering PGF/TikZ in Jupyter Notebooks"
license = "MIT"
authors = ["lucaslrodri"]
readme = "README.md"
packages = [{include = "jupyter_tikz"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/lucaslrodri/jupyter-tikz"
"Repository" = "https://github.com/lucaslrodri/jupyter-tikz"


[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
jinja2 = "^3.1.4"
isort = "^5.13.2"
black = "^24.4.2"
taskipy = "^1.13.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = "./jupyter_tikz"
addopts = "--no-cov"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort ."
test = "pytest -vv --cov=jupyter_tikz --cov-report lcov"
post_test = "coverage lcov"
